# drift

./: .atomicignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.opencode/plans/: drift-train-repo-update.md  git-commit-verification-flow.md  git-commit-verification.md  integration_tests.md  observability_improvements.md  repo_commit_deadlock_fix.md  repo_commit_iroh_signing.md  repo_commit_signing_validation.md  stage1_signing_dns_fix.md  todo  trainconfig-refactor.md  venv-activation-fix.md  verification-parallel-collection.md
.opencode/plans/auth/: drift-auth-apply-step-01.md  drift-auth-apply-step-02.md  drift-auth-apply-step-03.md  drift-auth-apply-step-04.md  drift-auth-apply-step-05.md  drift-auth-apply-step-06.md  drift-auth-apply-step-07.md  drift-auth-apply-step-08.md  drift-auth-apply-step-09.md  drift-auth-apply-step-10.md  drift-auth-apply-step-11.md  drift-auth-apply-step-12.md  drift-auth-apply-step-13.md  drift-auth-apply-step-14.md  drift-auth-checklist-annotated.md
.opencode/plans/bugfix/: drift-cli-script-discovery.md  drift-simulated-training-fix.md  fix-compilation-errors.md  fix_rand_core_conflict.md  rand_core_conflict_diagnosis.md  signing_bug_fix.md  spawn-command-uses-script-key.md  unused-imports-fix.md  venv-activation-bash-fix.md
.opencode/plans/coordinator-protocol/: drift-implementation-checklist-v3.md  part-1-drift-implementation-checklist-v2.md  part-2-drift-implementation-checklist-v2.md  session-2026-05-13-clarifications.md
.opencode/plans/feature/: spawn-cmd-env-vars.md
.opencode/plans/git-commit-verify/: git-commit-verification-flow.md
.opencode/plans/other/: LOCAL_REPO_LOOKUP_PLAN.md
.opencode/plans/repo-commit/: DIAGNOSIS_REPOCOMMIT_SIGNATURE.md  add-console-messages-repocommit-verification.md  commit-signing-fix.md  fix_hanging_test.md  fix_test_repo_commit_hang.md  git-commit-verification-implementation.md  integration_tests.md  make-repo-optional.md  repo_commit_deadlock_fix.md  repo_commit_iroh_signing.md  repo_commit_signing_validation.md  stage1_signing_deadlock_fix.md  stage1_signing_dns_fix.md  test-repo-commit-signing-fix.md
.opencode/plans/script-discovery/: drift-training-script-discovery.md  env-shared-replace-env.md  env-vars-inline-transmission.md  fix-drift-coord-tests.md  modify-script-discovery.md  preprovisioned-repo-activation.md  remove-env-file-support.md  spawn-command-uses-script-key.md
drift-auth/: Cargo.toml  README.md
drift-auth/src/: aggregator.rs  config.rs  coordinator.rs  crypto.rs  lib.rs  messages.rs  node.rs  replay.rs  rng.rs
drift-cli/: Cargo.toml  README.md
drift-cli/src/: cli.rs  coord.rs  ipc.rs  lib.rs  main.rs  node.rs
drift-cli/tests/: dataset_multi_arg.rs  node_test.rs
drift-coord/: Cargo.toml  README.md
drift-coord/src/: auth.rs  env.rs  lib.rs  main.rs  peer_registry.rs
drift-coord/tests/: coordinator_tests.rs  env_vars_transmission.rs  filter_sensitive_keys.rs  parse_env_file.rs  sensitive_key_filtering.rs
drift-node/: Cargo.toml  README.md
drift-node/src/: gpu.rs  lib.rs  main.rs  network.rs  script_discovery.rs  training.rs
drift-node/tests/: completion_handling.rs  ctrl_c_handler.rs  entrypoint_resolution.rs  env_vars_injection.rs  integration_training_trigger.rs  node_startup.rs  persistence.rs  script_discovery.rs  script_discovery_failure.rs  stage1_signing.rs  training_with_progress.rs
drift-proto/: Cargo.toml  README.md
drift-proto/src/: lib.rs
drift-proto/tests/: dataset_urls_serialization.rs  env_vars_no_persistence.rs  integration.rs  node_startup.rs  persistence.rs  repo_commit_verification.rs  shard_persistence.rs  stress.rs  training.rs  work_dispatch.rs
