[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[workspace]
members = ["drift-cli", "drift-node", "drift-coord", "drift-proto", "drift-auth"]
resolver = "2"
exclude = ["vendor/curve25519-dalek-5.0.0-pre.1"]

[workspace.dependencies]
iroh = "0.96"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
time = "0.3"
sha2 = "0.10.2"
hmac = "0.13"
rand = "0.8"
thiserror = "1"
digest = "0.10"

[patch.crates-io]
curve25519-dalek = { path = "vendor/curve25519-dalek-5.0.0-pre.1" }
ed25519-dalek = { path = "vendor/ed25519-dalek-3.0.0-pre.1" }
iroh = { path = "vendor/iroh-0.96.0" }
