[package]
name = "drift-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
iroh = { workspace = true }
serde = { workspace = true }
serde_json = "1"
toml = "0.5"
thiserror = "1"
anyhow = { workspace = true }
tokio = { version = "1", features = ["macros"] }
async-trait = { version = "0.1" }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
lru = "0.1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[features]
default = []

[lib]
path = "src/lib.rs"
