[package]
name = "drift-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
iroh = { workspace = true }
serde = { workspace = true }
serde_json = "1"
toml = "0.5"
thiserror = "1"
anyhow = { workspace = true }
tokio = { version = "1", features = ["macros"] }
async-trait = { version = "0.1" }
ed25519-dalek = { path = "../vendor/ed25519-dalek-3.0.0-pre.1", features = ["rand_core"] }
rand = { workspace = true }
rand_core = { workspace = true }
signature = { workspace = true }
lru = "0.1"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[features]
default = []

[lib]
path = "src/lib.rs"
