[package]
name = "drift-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "drift"
path = "src/main.rs"

[lib]
name = "drift_cli"
path = "src/lib.rs"

[dependencies]
drift-proto = { path = "../drift-proto" }
drift-auth = { path = "../drift-auth" }
iroh = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }
ed25519-dalek = { path = "../vendor/ed25519-dalek-3.0.0-pre.1" }

libc = "0.2"
