[package]
name = "drift-node"
version = "0.1.0"
edition = "2021"

[dependencies]
drift-proto = { path = "../drift-proto" }
drift-auth = { path = "../drift-auth" }
iroh = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
toml = "0.5"
