[package]
name = "drift-node"
version = "0.1.0"
edition = "2021"

[dependencies]
drift-proto = { path = "../drift-proto" }
drift-auth = { path = "../drift-auth" }
iroh = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
ed25519-dalek = { path = "../vendor/ed25519-dalek-3.0.0-pre.1", features = ["rand_core"] }
rand = { workspace = true }
toml = "0.5"
