[package]
name = "drift-node"
version = "0.1.0"
edition = "2021"

[dependencies]
drift-proto = { path = "../drift-proto" }
drift-auth = { path = "../drift-auth" }
iroh = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
ed25519-dalek = { path = "../vendor/ed25519-dalek-3.0.0-pre.1", features = ["rand_core"] }
rand = { workspace = true }
toml = "0.5"

[[test]]
name = "stage1_signing"
path = "tests/stage1_signing.rs"

[[test]]
name = "training_with_progress"
path = "tests/training_with_progress.rs"

[[test]]
name = "script_discovery_failure"
path = "tests/script_discovery_failure.rs"

[[test]]
name = "integration_training_trigger"
path = "tests/integration_training_trigger.rs"
