[package]
name = "drift-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
drift-auth = { path = "../drift-auth" }
iroh = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
rand = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
